[gd_scene load_steps=12 format=3 uid="uid://do8s84m25x0mw"]

[ext_resource type="Script" path="res://scenes/ui/character_selection.gd" id="1_47f85"]
[ext_resource type="Resource" uid="uid://k8j8ok8mxu6x" path="res://scenes/run/run_startup.tres" id="2_8esu3"]
[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://art/tile_0087.png" id="2_y1h4q"]
[ext_resource type="Texture2D" uid="uid://co3le60un8sa2" path="res://art/python_logo.png" id="3_s6v7n"]
[ext_resource type="Texture2D" uid="uid://d3yqu1qkd1eti" path="res://art/js_icon.png" id="4_sr6in"]
[ext_resource type="Texture2D" uid="uid://cmxbtc7ngddnc" path="res://art/java_icon.png" id="5_fx77b"]

[sub_resource type="Gradient" id="Gradient_c5lsg"]
colors = PackedColorArray(6.13667e-07, 0.231514, 0.0892798, 1, 0, 0.0275253, 0.0723829, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_edghp"]
gradient = SubResource("Gradient_c5lsg")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_cqq7b"]
shadow_color = Color(0.0980392, 0.623529, 0, 0.439216)

[sub_resource type="LabelSettings" id="LabelSettings_x3o8r"]
line_spacing = 2.0
font_size = 10
shadow_color = Color(0.0588235, 0.533333, 0, 0.439216)

[sub_resource type="ButtonGroup" id="ButtonGroup_o4208"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_47f85")
run_startup = ExtResource("2_8esu3")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_edghp")

[node name="CharacterText" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 16.0
offset_right = 81.0
offset_bottom = 74.0
grow_horizontal = 2
theme_override_constants/separation = 8

[node name="Name" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Python"
label_settings = SubResource("LabelSettings_cqq7b")

[node name="Description" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Description of a 
character"
label_settings = SubResource("LabelSettings_x3o8r")

[node name="CharacterPortriat" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -72.0
offset_right = 76.0
offset_bottom = -12.0
grow_vertical = 0
texture = ExtResource("2_y1h4q")
expand_mode = 1
stretch_mode = 5

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 120.0
offset_right = 242.0
offset_bottom = 134.0
text = "Start"

[node name="CharacterButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 80.0
offset_right = 194.0
offset_bottom = 110.0
theme_override_constants/separation = 10

[node name="PythonButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_o4208")

[node name="Icon" type="TextureRect" parent="CharacterButtons/PythonButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_s6v7n")
expand_mode = 1
stretch_mode = 5

[node name="JSButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_o4208")

[node name="Icon" type="TextureRect" parent="CharacterButtons/JSButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_sr6in")
expand_mode = 1
stretch_mode = 5

[node name="JavaButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_o4208")

[node name="Icon" type="TextureRect" parent="CharacterButtons/JavaButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_fx77b")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CharacterButtons/PythonButton" to="." method="_on_python_button_pressed"]
[connection signal="pressed" from="CharacterButtons/JSButton" to="." method="_on_js_button_pressed"]
[connection signal="pressed" from="CharacterButtons/JavaButton" to="." method="_on_java_button_pressed"]
